--- a/00/makefile
+++ b/00/makefile
@@ -4,10 +4,10 @@ task0: task0_by_rows task0_by_columns
 	./task0_by_rows.exe && ./task0_by_columns.exe
 
 task0_by_rows: 
-	g++ task0_by_rows.cpp -o task0_by_rows.exe
+	g++ task0_by_rows.cpp -o task0_by_rows.exe -O2
 
 task0_by_columns: 
-	g++ task0_by_columns.cpp -o task0_by_columns.exe
+	g++ task0_by_columns.cpp -o task0_by_columns.exe -O0
 
 clean: 
-	del /f *.exe           
+	rm -rf /f *.exe           
